refactor: apply audit fixes — connection pool hardening, DAO cleanup, controller improvements
Major refactor driven by deep audit findings (V3.0):
- ConexaoBD: add semaphore to limit total connections, bounded pool capacity
- Remove dead code: CidadeDAO, ConferenteDAO, PooledConnection (inlined)
- Fix connection leak patterns across 50+ controllers (try-with-resources)
- Update deep audit reports (SECURITY, LOGIC, RESILIENCE) and archive previous versions
- Clean up temp audit files after review consolidation
- Add frete sequence migration script (010)
- Model adjustments: FreteItem, Passageiro, StatusPagamento fields

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>